--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Jonathan Doe | Web Designer, Director | name@yourdomain.com</title>
+	<title>Owen Jones | Web Developer | owengalenjones@gmail.com</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -154,7 +154,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+			<p>Owen Jones &mdash; <a href="mailto:owengalenjones@gmail.com">owengalenjones@gmail.com</a> &mdash; (215) - 796-4782</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
